Improve test coverage of vuln management upload tasks
Signed-off-by: nscuro <nscuro@protonmail.com>